Fixed Button vertical alignment.

--- a/modules/gui/frontend/src/widget/button.module.css
+++ b/modules/gui/frontend/src/widget/button.module.css
@@ -30,7 +30,7 @@
 .button, .button * {
     display: flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
 }
 
 /* sizes */
